# Driftwood

./: Cargo.toml  README.md
crates/crdt-core/: Cargo.toml
crates/crdt-core/src/: lib.rs  lww_map.rs  or_set.rs  vclock.rs
crates/demo-cli/: Cargo.toml
crates/demo-cli/src/: main.rs
crates/sync-node/: Cargo.toml
crates/sync-node/src/: gossip.rs  main.rs  storage.rs  wire.rs
