[package]
name = "sync-node"
version = "0.1.0"
edition = "2021"

[dependencies]
crdt-core = { path = "../crdt-core" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
sled = "0.34"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4.5", features = ["derive"] }
